# street-sim-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
benches/: street_sim_bench.rs  tm_rs_bench.rs
python/: Cargo.toml  Pipfile  README.md  py_text_matcher_rs.pyi  pyproject.toml  test_tm_rs.py  text_matcher_rs.pyi
python/src/: lib.rs
src/: candidate.rs  lib.rs  main.rs  street_matcher.rs  street_sim.rs  text_matcher.rs  text_sim.rs
test_data/: places.txt
