[package]
name = "street-sim-rs"
version = "0.1.0"
authors = ["child404 <vladrez1703@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The library to match candidate text (especially Swiss streets) from file input"
keywords = ["text-matcher-rs", "nlp", "street-processing", "text-processing"]
categories = ["text-processing"]
readme = "README.md"
repository = "https://github.com/child404/text-matcher-rs"

[lib]
name = "street_sim_rs"
path = "src/lib.rs"

[[bin]]
name = "tm_rs"
path = "src/main.rs"

[[bench]]
name = "street_sim_bench"
harness = false # TODO: add custom harness

[dependencies]
strsim = "0.10.0"
unicode-segmentation = "1.10.0"
threadpool = "1.8.1"
regex = "1.6.0"
toml = "0.7.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
criterion = "0.4.0"
