[package]
name = "mass-rs"
version = "0.1.0"
authors = ["Vladyslav Rezohlazov <vladyslav.rezohlazov@novalytica.com>"]
edition = "2021"
license = "MIT"
description = "The library to Match Swiss Streets"
keywords = ["mass-rs", "nlp", "street-processing", "text-processing"]
categories = ["text-processing"]
readme = "README.md"
repository = "https://github.com/Novalytica/mass-rs"

[lib]
name = "mass-rs"
path = "src/lib.rs"

[[bin]]
name = "mass"
path = "src/main.rs"

[[bench]]
name = "mass_bench"
harness = false

[dependencies]
strsim = "0.10.0"
unicode-segmentation = "1.10.0"
threadpool = "1.8.1"
regex = "1.6.0"
toml = "0.7.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
criterion = "0.4.0"
